JECC - switched all combo boxes to no float mode JECC - switched all text fields to disabled float mode JEVisCore - updated poms